fix wordwrap on btns for exhibits on small screens

--- a/src/app/exhibit/exhibit.component.scss
+++ b/src/app/exhibit/exhibit.component.scss
@@ -38,6 +38,11 @@ $crimson: #e9232d;
     padding-bottom: 2em;
     // background-color: $light-blue;
 
+    .btn {
+        white-space: normal;
+        text-align: left;
+    }
+
     .btn-link {
         color: $dark-blue;
     }
